--- a/public_html/index.html
+++ b/public_html/index.html
@@ -16,7 +16,7 @@ and open the template in the editor.
         <div class="head col-4">Header</div>
         <div class="lsc col-1">
             <p>Panda</p>
-            <p>Panda</p>
+            <p>done</p>
             <p>Panda</p>
             <p>Panda</p>
         </div>
